# complexity-tom-dwm

./: .gitignore  LICENSE  README.md  config-azure.example.json  config.example.json  index.html  pyproject.toml
data/Adv-CSFB/: splits.json  unexpected_contents.jsonl  unexpected_contents_preprompt.txt  unexpected_contents_source.json
data/fantom/: .built  splits.json
data/mindgames/: splits.json  train-00000-of-00001-29e951c428782278.csv
data/socialIQa/: splits.json
data/tomi/: sap.csv  splits.json
main/: __main__.py  prompt_utils.py  tot_prompt.py  utils.py
main/mydatasets/: __init__.py  abstract_dataset.py  adv_csfb_dataset.py  commonsenseqa_dataset.py  fantom_dataset.py  fantom_eval_agent.py  mindgames_dataset.py  opentom_dataset.py  sap_dataset.py  socialiqa_dataset.py  tomi_dataset.py
main/tot_tasks/: __init__.py  adv_csfb.py  base.py  commonsenseQA.py  fantom.py  mindgames.py  socialIQa.py  tomi.py
memo/: README.md  main.py  memorization_check.py  memorization_check_2.py
prompt/adv-csfb/: cot-0shot.txt  cot-wm-chat-0shot.txt  struct-0shot.txt  struct-yaml-0shot.txt  tot-0shot.txt  tot.yaml
prompt/fantom/: cot-0shot.txt  cot-wm-chat-0shot.txt  struct-0shot.txt  struct-yaml-0shot.txt  tot-0shot.txt  tot.yaml
prompt/mindgames/: cot-0shot.txt  cot-wm-chat-0shot.txt  struct-0shot.txt  struct-yaml-0shot.txt  tot-0shot.txt  tot.yaml
prompt/socialiqa/: cot-0shot.txt  cot-wm-chat-0shot.txt  (+4 more)
results/: README.md  a.sh
scripts/: gpt-3.5.sh  gpt-4.sh  llama-70.sh  llama-8.sh  mixtral.sh
statefulness/: README.md  copy_state_data.py  to_json.py
(+37 files in other folders)
