[tool.poetry]
name = "llm-tom"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "0.28"
huggingface-hub = "^0.20.3"
ipykernel = "^6.29.2"
ipywidgets = "^8.1.2"
pandas = "^2.2.0"
scikit-learn = "1.4"
sentence-transformers = "^2.3.1"
tiktoken = "^0.6.0"
accelerate = "0.26.1"
pydantic = "^2.6.1"
torch = "^2.2.1"
wandb = "^0.16.4"
datasets = "^2.18.0"
backoff = "^2.2.1"
diffusers = "^0.27.2"
groq = "^0.5.0"
spaces = "^0.27.1"
gradio = "^4.28.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
nltk = "^3.8.1"
thefuzz = "^0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
